--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 <body>
 <header>
-  <img src="https://openclipart.org/download/232064/Logo-Logo-White-Background.svg" alt="Logo" style="max-width:74px;">
+  <img src="https://www.gstatic.com/images/branding/googlelogo/svg/googlelogo_clr_74x24px.svg" alt="Google" style="filter:brightness(0) invert(1)">
   <input id="searchInput" type="text" placeholder="Best street food in Bangkok">
 </header>
 
