--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ function renderGallery(filter='all'){
       <div class="card-body">${d.name}</div>`;
     gallery.appendChild(card);
   });
-  summaryText.textContent = `Here is the top ${list.length} street-food dishes in Bangkok ranked by freshness & local reviews.`;
+  summaryText.textContent = `The top ${list.length} street-food dishes in Bangkok ranked by freshness & local reviews are Som Tam, Pad Thai, Mango Sticky Rice, Tom Yum, and Coconut Pancake`;
 }
 
 /* --- Filters ------------------------------------------------------------- */
